Update HTML files

--- a/news.html
+++ b/news.html
@@ -9,57 +9,57 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top AI News Stories of the Week</title>
+<title>Top AI News Stories of the Week</title>
 </head>
 <body>
-  <h1>Top AI News Stories of the Week</h1>
+<h1>Top AI News Stories of the Week</h1>
 
-  <h2>With landmark AI Act, the EU takes the lead in regulating artificial intelligence</h2>
-  <h3>Source: Android Central</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>The European Union has reached a preliminary agreement on the AI Act, the world's first set of rules governing the use of AI.</li>
-    <li>The AI Act aims to regulate the use of AI to curb potential risks of advanced automation and misinformation.</li>
-    <li>The legislation targets malicious applications of AI, such as predictive policing, image scraping for facial recognition, and manipulating human behavior.</li>
-    <li>Big tech companies will have to comply with transparency requirements, share technical documentation, and provide detailed summaries of content used for training.</li>
-    <li>The AI Act is expected to be formally ratified and adopted by the EU, but its enforceability is not expected for another 12 to 24 months.</li>
-  </ul>
-  <a href="https://www.androidcentral.com/apps-software/eu-provisional-agreement-ai-act-regulate-artificial-intelligence">Read More</a>
+<h2>Title: My Surprisingly Unbiased Week With Elon Musk's 'Politically Biased' Chatbot</h2>
+<h3>Source: Wired</h3>
+<h3>Summary:</h3>
+<ul>
+<li>- Elon Musk's chatbot, Grok, built by his company xAI, has been criticized by some users for being politically liberal, contrary to Musk's right-leaning political views.</li>
+<li>- Musk has acknowledged the problem and stated that xAI will work to reduce Grok's political bias in the future.</li>
+<li>- An analysis of Grok's responses found that it exhibits a strong libertarian streak but also leans left on certain topics.</li>
+<li>- It is challenging to completely remove bias from AI language models, and attempts to do so may result in dull and neutered chatbots.</li>
+<li>- Grok's performance is currently less advanced than other cutting-edge chatbots like OpenAI's ChatGPT. It is prone to hallucinations and can be easily tricked.</li>
+</ul>
+<a href="https://www.wired.com/story/fast-forward-elon-musk-grok-political-bias-chatbot/">Read more</a>
 
-  <h2>My Surprisingly Unbiased Week With Elon Musk's 'Politically Biased' Chatbot</h2>
-  <h3>Source: Wired</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>Elon Musk's AI company xAI has released a chatbot called Grok, which is intended to be less politically biased than OpenAI's ChatGPT.</li>
-    <li>Some users have raised concerns about Grok's political leanings, as it has been observed to give answers that align with left-leaning views.</li>
-    <li>Musk has acknowledged the issue and stated that xAI will work to reduce Grok's political bias in the future.</li>
-    <li>An analysis of Grok's responses found that it exhibits a strong libertarian streak but also leans left on certain topics.</li>
-    <li>It is challenging to remove bias from AI models, and even seemingly neutral training data can produce biased outputs.</li>
-  </ul>
-  <a href="https://www.wired.com/story/fast-forward-elon-musk-grok-political-bias-chatbot/">Read More</a>
+<h2>Title: Google Assistant is so Pixel 8 as report claims new 'Pixie' AI assistant may arrive with Pixel 9</h2>
+<h3>Source: Android Central</h3>
+<h3>Summary:</h3>
+<ul>
+<li>- Google is reportedly developing a new AI assistant called Pixie, which could debut as early as next year for Pixel devices.</li>
+<li>- Pixie is expected to be a more powerful version of Google Assistant, potentially offering more personalized and data-driven features.</li>
+<li>- The goal of making AI features exclusive to the Pixel lineup is to differentiate Google's products from competitors and attract customers looking for advanced AI capabilities.</li>
+<li>- Google has been actively incorporating AI into its products, releasing models like Gemini and working on even more powerful iterations like Gemini Ultra.</li>
+<li>- Pixie may initially be available on the Pixel 9 and Pixel 9 Pro, with plans to expand to other affordable phones, watches, and possibly the Pixel Tablet.</li>
+</ul>
+<a href="https://www.androidcentral.com/apps-software/google-pixie-pixel-9-report">Read more</a>
 
-  <h2>Sam Altman’s Weird Eyeball Scanning Crypto Tech Comes to Minecraft</h2>
-  <h3>Source: Gizmodo.com</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>Worldcoin, Sam Altman's cryptocurrency venture, is integrating its verification services into popular apps like Reddit, Discord, Shopify, Mercado Libre, Telegram, and Minecraft.</li>
-    <li>This integration is part of Altman's World ID 2.0, which aims to be a "human passport for the internet."</li>
-    <li>Users will be able to verify their existing accounts and use World ID as a sign-in method for a more seamless experience.</li>
-    <li>Worldcoin's vision is to become the default verification system for the internet and redistribute wealth to the people.</li>
-    <li>Minecraft's integration with Worldcoin is notable, as it previously removed Bitcoin payments but could potentially include cryptocurrency in the future.</li>
-  </ul>
-  <a href="https://gizmodo.com/worldcoin-sam-altman-eye-scan-crypto-minecraft-1851096041">Read More</a>
+<h2>Title: Open Source start-up Mistral receives $414 million in funding</h2>
+<h3>Source: ReadWrite</h3>
+<h3>Summary:</h3>
+<ul>
+<li>- Open-source AI provider Mistral has closed its initial round of funding, bringing its total investments to around €450 million.</li>
+<li>- The funding round values Mistral at $2 billion, making it a leader in European artificial intelligence.</li>
+<li>- Silicon Valley investors Andreessen Horowitz, Nvidia, and Salesforce have all made funding commitments in Mistral's Series A round.</li>
+<li>- Mistral aims to bring open-source AI models to the world, fostering open research, open models, and open collaboration in the AI community.</li>
+<li>- Mistral's exponential growth in investment and Germany's Aleph Alpha receiving a comparable investment highlight Europe's presence in AI start-ups.</li>
+</ul>
+<a href="https://readwrite.com/open-source-start-up-mistral-receives-414-million-in-funding/">Read more</a>
 
-  <h2>OpenAI will pay to train its models on Business Insider and Politico articles</h2>
-  <h3>Source: Engadget</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>OpenAI has entered into a partnership with German publisher Axel Springer to use its news articles to train its AI models.</li>
-    <li>The deal is worth tens of millions of euros over the next three years.</li>
-    <li>OpenAI aims to provide people with new ways to access quality, real-time news content through its AI tools.</li>
-    <li>Axel Springer will provide OpenAI with current news articles and archives from all its brands, which will be used to train OpenAI's large language models.</li>
-    <li>In return, OpenAI will attribute and link the articles in ChatGPT's responses, and Axel Springer can use OpenAI's technology to improve its own products.</li>
-  </ul>
-  <a href="https://www.engadget.com/openai-will-pay-to-train-its-models-on-business-insider-and-politico-articles-200327559.html">Read More</a>
+<h2>Title: OpenAI’s Ilya Sutskever Has a Plan for Keeping Super-Intelligent AI in Check</h2>
+<h3>Source: Wired</h3>
+<h3>Summary:</h3>
+<ul>
+<li>- OpenAI's Superalignment team, led by Ilya Sutskever, is working on guiding the behavior of superintelligent AI models as they become more advanced.</li>
+<li>- The team has conducted experiments to test a method of letting an inferior AI model guide the behavior of a much smarter one without diminishing its intelligence.</li>
+<li>- The researchers explored the use of supervision to tune AI systems to be more helpful and less harmful, aiming to automate this process as AI advances.</li>
+<li>- OpenAI is offering $10 million in grants for further advancements in weak-to-strong supervision, interpretability of advanced models, and strengthening models against prompts designed to break their restrictions.</li>
+</ul>
+<a href="https://www.wired.com/story/openai-ilya-sutskever-ai-safety/">Read more</a>
+
 </body>
 </html>
