--- a/blog.html
+++ b/blog.html
@@ -9,34 +9,31 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top AI Blog Posts of the Week</title>
+<title>Top AI Blog Posts of the Week</title>
 </head>
 <body>
-  <h1>Top AI Blog Posts of the Week</h1>
-  
-  <h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
-  <h3>Source: Tomhazledine.com</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>The author used LLM embeddings to find related posts for their statically-generated blog.</li>
-    <li>They also used GPT4 to explain why the related posts are similar.</li>
-    <li>Embeddings are a mathematical representation of the meaning of a piece of text.</li>
-    <li>Embeddings can be used for natural language search and to calculate relations between content.</li>
-    <li>The author faced challenges with API rate limits, API token limits, GPT4 pricing, prompt tweaking, inconsistent output, hallucination, post deletion, and node memory while implementing the script.</li>
-  </ul>
-  <a href="https://tomhazledine.com/llm-related-posts/">Link</a>
-  
-  <h2>Title: Intel Neural-Chat-7B Model Achieves Top Ranking on LLM Leaderboard</h2>
-  <h3>Source: Intel.com</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>The Intel neural-chat-7b model has achieved the #1 ranking for 7-billion-parameter models on the Hugging Face Open LLM Leaderboard.</li>
-    <li>The model achieved comparable accuracy scores to models 2-3x larger, making it suitable for a wide range of compute platforms.</li>
-    <li>The model is based on the Mistral-7B-v0.1 transformer model from Mistral AI and was fine-tuned using Intel Extension for Transformers and Direct Preference Optimization (DPO).</li>
-    <li>The blog post provides a walkthrough example for using the model for inference and includes installation instructions and code samples.</li>
-    <li>Intel Extension for Transformers and Intel Neural Compressor are both available, along with a full suite of end-to-end AI software from Intel.</li>
-  </ul>
-  <a href="https://community.intel.com/t5/Blogs/Tech-Innovation/Artificial-Intelligence-AI/Intel-neural-chat-7b-Model-Achieves-Top-Ranking-on-LLM/post/1549386">Link</a>
-  
+<h1>Top AI Blog Posts of the Week</h1>
+<h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
+<h3>Source: Tomhazledine.com</h3>
+<h3>Summary:</h3>
+<ul>
+<li>The author used LLM embeddings to find related posts for their blog and GPT4 to explain why they're similar.</li>
+<li>Embeddings are a way to make LLMs useful without worrying about "hallucination" or incorrect content.</li>
+<li>The author previously tried manual and CMS-based approaches to generate related posts but found them impractical.</li>
+<li>Embeddings are mathematical representations of the meaning of text, and their positions in a multi-dimensional space can determine the similarity between texts.</li>
+<li>The author developed a script that reads markdown files, generates embeddings and summaries, and uses GPT4 to generate explanations for the similarity between posts.</li>
+</ul>
+<a href="https://tomhazledine.com/llm-related-posts/">Link</a>
+<h2>Title: Intel Neural-Chat-7B Model Achieves Top Ranking on LLM Leaderboard</h2>
+<h3>Source: Intel.com</h3>
+<h3>Summary:</h3>
+<ul>
+<li>The Intel neural-chat-7b model has achieved the top ranking for 7-billion-parameter models on the Hugging Face Open LLM Leaderboard.</li>
+<li>The model achieved comparable accuracy scores to models 2-3x larger, making it suitable for deployment on a wide range of compute platforms.</li>
+<li>The model is based on the Mistral-7B-v0.1 transformer model from Mistral AI and was fine-tuned using Intel Gaudi2 AI accelerators.</li>
+<li>The fine-tuning process utilized direct preference optimization (DPO), which is more computationally efficient and does not require a reward model.</li>
+<li>The Intel Extension for Transformers library provides tools for fine-tuning, customizing, and optimizing the NeuralChat chatbot based on this model.</li>
+</ul>
+<a href="https://community.intel.com/t5/Blogs/Tech-Innovation/Artificial-Intelligence-AI/Intel-neural-chat-7b-Model-Achieves-Top-Ranking-on-LLM/post/1549386">Link</a>
 </body>
 </html>
