--- a/news.html
+++ b/news.html
@@ -13,53 +13,28 @@ layout: default
 </head>
 <body>
 <h1>Top AI News Stories of the Week</h1>
-
-<h2>Title: My Surprisingly Unbiased Week With Elon Musk's 'Politically Biased' Chatbot</h2>
+<h2>Title: The Hollywood Strikes Stopped AI From Taking Your Job. But for How Long?</h2>
 <h3>Source: Wired</h3>
 <h3>Summary:</h3>
 <ul>
-<li>- Elon Musk's chatbot, Grok, built by his company xAI, has been criticized by some users for being politically liberal, contrary to Musk's right-leaning political views.</li>
-<li>- Musk has acknowledged the problem and stated that xAI will work to reduce Grok's political bias in the future.</li>
-<li>- An analysis of Grok's responses found that it exhibits a strong libertarian streak but also leans left on certain topics.</li>
-<li>- It is challenging to completely remove bias from AI language models, and attempts to do so may result in dull and neutered chatbots.</li>
-<li>- Grok's performance is currently less advanced than other cutting-edge chatbots like OpenAI's ChatGPT. It is prone to hallucinations and can be easily tricked.</li>
+<li>Hollywood unions, such as the Writers Guild of America and the Screen Actors Guild, resisted the threat of AI taking over their jobs through strikes and negotiations.</li>
+<li>The unions sought protections against AI, such as preventing AI from being trained on their work or manipulating it without their permission.</li>
+<li>The resistance against AI also extended to other industries, with authors and visual artists filing lawsuits against AI companies for using their work without permission.</li>
+<li>Governments, including the US government, have started taking steps to curtail AI's impact on human work and provide support for workers facing labor disruptions from AI.</li>
+<li>While AI has the potential to create new jobs in the field, there are concerns about job displacement, especially for entry-level positions, and the impact of AI on human bias and creativity.</li>
 </ul>
-<a href="https://www.wired.com/story/fast-forward-elon-musk-grok-political-bias-chatbot/">Read more</a>
+<a href="https://www.wired.com/story/hollywood-saved-your-job-from-ai-2023-will-it-last/">Read More</a>
 
-<h2>Title: Google Assistant is so Pixel 8 as report claims new 'Pixie' AI assistant may arrive with Pixel 9</h2>
-<h3>Source: Android Central</h3>
+<h2>Title: The top 15 people in enterprise artificial intelligence</h2>
+<h3>Source: Business Insider</h3>
 <h3>Summary:</h3>
 <ul>
-<li>- Google is reportedly developing a new AI assistant called Pixie, which could debut as early as next year for Pixel devices.</li>
-<li>- Pixie is expected to be a more powerful version of Google Assistant, potentially offering more personalized and data-driven features.</li>
-<li>- The goal of making AI features exclusive to the Pixel lineup is to differentiate Google's products from competitors and attract customers looking for advanced AI capabilities.</li>
-<li>- Google has been actively incorporating AI into its products, releasing models like Gemini and working on even more powerful iterations like Gemini Ultra.</li>
-<li>- Pixie may initially be available on the Pixel 9 and Pixel 9 Pro, with plans to expand to other affordable phones, watches, and possibly the Pixel Tablet.</li>
+<li>Insider has compiled a list of the top 100 people at the forefront of artificial intelligence.</li>
+<li>This article focuses on the top 15 people in enterprise technology.</li>
+<li>Cloud companies like Amazon, Microsoft, and Google are investing in generative AI, which could drive cloud adoption.</li>
+<li>The list includes influential figures from companies like Anthropic, OpenAI, Hugging Face, Cohere, Baidu, Databricks, Grammarly, Google, Salesforce, Microsoft, Inflection AI, AWS, and more.</li>
 </ul>
-<a href="https://www.androidcentral.com/apps-software/google-pixie-pixel-9-report">Read more</a>
-
-<h2>Title: Open Source start-up Mistral receives $414 million in funding</h2>
-<h3>Source: ReadWrite</h3>
-<h3>Summary:</h3>
-<ul>
-<li>- Open-source AI provider Mistral has closed its initial round of funding, bringing its total investments to around €450 million.</li>
-<li>- The funding round values Mistral at $2 billion, making it a leader in European artificial intelligence.</li>
-<li>- Silicon Valley investors Andreessen Horowitz, Nvidia, and Salesforce have all made funding commitments in Mistral's Series A round.</li>
-<li>- Mistral aims to bring open-source AI models to the world, fostering open research, open models, and open collaboration in the AI community.</li>
-<li>- Mistral's exponential growth in investment and Germany's Aleph Alpha receiving a comparable investment highlight Europe's presence in AI start-ups.</li>
-</ul>
-<a href="https://readwrite.com/open-source-start-up-mistral-receives-414-million-in-funding/">Read more</a>
-
-<h2>Title: OpenAI’s Ilya Sutskever Has a Plan for Keeping Super-Intelligent AI in Check</h2>
-<h3>Source: Wired</h3>
-<h3>Summary:</h3>
-<ul>
-<li>- OpenAI's Superalignment team, led by Ilya Sutskever, is working on guiding the behavior of superintelligent AI models as they become more advanced.</li>
-<li>- The team has conducted experiments to test a method of letting an inferior AI model guide the behavior of a much smarter one without diminishing its intelligence.</li>
-<li>- The researchers explored the use of supervision to tune AI systems to be more helpful and less harmful, aiming to automate this process as AI advances.</li>
-<li>- OpenAI is offering $10 million in grants for further advancements in weak-to-strong supervision, interpretability of advanced models, and strengthening models against prompts designed to break their restrictions.</li>
-</ul>
-<a href="https://www.wired.com/story/openai-ilya-sutskever-ai-safety/">Read more</a>
+<a href="https://www.businessinsider.com/ai-100-top-enterprise-artificial-intelligence-2023-11">Read More</a>
 
 </body>
 </html>
