Update HTML files

--- a/blog.html
+++ b/blog.html
@@ -9,31 +9,33 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
-<title>Top AI Blog Posts of the Week</title>
+  <title>Top AI Blog Posts of the Week</title>
 </head>
 <body>
-<h1>Top AI Blog Posts of the Week</h1>
-<h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
-<h3>Source: Tomhazledine.com</h3>
-<h3>Summary:</h3>
-<ul>
-<li>The author used LLM embeddings to find related posts for their blog and GPT4 to explain why they're similar.</li>
-<li>Embeddings are a way to make LLMs useful without worrying about "hallucination" or incorrect content.</li>
-<li>The author previously tried manual and CMS-based approaches to generate related posts but found them impractical.</li>
-<li>Embeddings are mathematical representations of the meaning of text, and their positions in a multi-dimensional space can determine the similarity between texts.</li>
-<li>The author developed a script that reads markdown files, generates embeddings and summaries, and uses GPT4 to generate explanations for the similarity between posts.</li>
-</ul>
-<a href="https://tomhazledine.com/llm-related-posts/">Link</a>
-<h2>Title: Intel Neural-Chat-7B Model Achieves Top Ranking on LLM Leaderboard</h2>
-<h3>Source: Intel.com</h3>
-<h3>Summary:</h3>
-<ul>
-<li>The Intel neural-chat-7b model has achieved the top ranking for 7-billion-parameter models on the Hugging Face Open LLM Leaderboard.</li>
-<li>The model achieved comparable accuracy scores to models 2-3x larger, making it suitable for deployment on a wide range of compute platforms.</li>
-<li>The model is based on the Mistral-7B-v0.1 transformer model from Mistral AI and was fine-tuned using Intel Gaudi2 AI accelerators.</li>
-<li>The fine-tuning process utilized direct preference optimization (DPO), which is more computationally efficient and does not require a reward model.</li>
-<li>The Intel Extension for Transformers library provides tools for fine-tuning, customizing, and optimizing the NeuralChat chatbot based on this model.</li>
-</ul>
-<a href="https://community.intel.com/t5/Blogs/Tech-Innovation/Artificial-Intelligence-AI/Intel-neural-chat-7b-Model-Achieves-Top-Ranking-on-LLM/post/1549386">Link</a>
+  <h1>Top AI Blog Posts of the Week</h1>
+  
+  <h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
+  <h3>Source: Tomhazledine.com</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>The author used LLM embeddings to find related posts for their blog and GPT-4 to explain why they are similar.</li>
+    <li>Embeddings are a way to make LLMs useful without the worry of generating incorrect or "hallucinated" content.</li>
+    <li>The author tried manual approaches and leaning on CMS features to generate related posts in the past but found limitations and issues with both methods.</li>
+    <li>Embeddings are a mathematical representation of the meaning of a piece of text and can be used for natural language search and calculating relations between content.</li>
+    <li>The author developed a node script that reads markdown files, generates embeddings, compares similarities, and uses GPT-4 to generate explanations for why posts are similar.</li>
+  </ul>
+  <a href="https://tomhazledine.com/llm-related-posts/">Link to Article</a>
+  
+  <h2>Title: How close are we to peak AI?</h2>
+  <h3>Source: Business Insider</h3>
+  <h4>Summary:</h4>
+  <ul>
+    <li>OpenAI's GPT-4 remains unbeaten and no AI model has convincingly outperformed it since its release in March.</li>
+    <li>The question now is whether generative AI, the most popular form of AI, has already reached its peak performance.</li>
+    <li>While theoretical improvements are possible, achieving them in practice is challenging.</li>
+    <li>Google's Gemini Ultra, released as a response to GPT-4, only slightly surpasses GPT-4 on performance benchmarks.</li>
+    <li>The industry is still striving for artificial general intelligence (AGI), but there may be limitations with transformer models that hinder progress.</li>
+  </ul>
+  <a href="https://www.businessinsider.com/generative-ai-chatgpt-getting-close-peak-2023-12">Link to Article</a>
 </body>
 </html>
