Update HTML files

--- a/blog.html
+++ b/blog.html
@@ -9,33 +9,45 @@ layout: default
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Top AI Blog Posts of the Week</title>
+<title>Top AI Blog Posts of the Week</title>
 </head>
 <body>
-  <h1>Top AI Blog Posts of the Week</h1>
-  
-  <h2>Title: Show HN: My related-posts finder script (with LLM and GPT4 enhancement)</h2>
-  <h3>Source: Tomhazledine.com</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>The author used LLM embeddings to find related posts for their blog and GPT-4 to explain why they are similar.</li>
-    <li>Embeddings are a way to make LLMs useful without the worry of generating incorrect or "hallucinated" content.</li>
-    <li>The author tried manual approaches and leaning on CMS features to generate related posts in the past but found limitations and issues with both methods.</li>
-    <li>Embeddings are a mathematical representation of the meaning of a piece of text and can be used for natural language search and calculating relations between content.</li>
-    <li>The author developed a node script that reads markdown files, generates embeddings, compares similarities, and uses GPT-4 to generate explanations for why posts are similar.</li>
-  </ul>
-  <a href="https://tomhazledine.com/llm-related-posts/">Link to Article</a>
-  
-  <h2>Title: How close are we to peak AI?</h2>
-  <h3>Source: Business Insider</h3>
-  <h4>Summary:</h4>
-  <ul>
-    <li>OpenAI's GPT-4 remains unbeaten and no AI model has convincingly outperformed it since its release in March.</li>
-    <li>The question now is whether generative AI, the most popular form of AI, has already reached its peak performance.</li>
-    <li>While theoretical improvements are possible, achieving them in practice is challenging.</li>
-    <li>Google's Gemini Ultra, released as a response to GPT-4, only slightly surpasses GPT-4 on performance benchmarks.</li>
-    <li>The industry is still striving for artificial general intelligence (AGI), but there may be limitations with transformer models that hinder progress.</li>
-  </ul>
-  <a href="https://www.businessinsider.com/generative-ai-chatgpt-getting-close-peak-2023-12">Link to Article</a>
+<h1>Top AI Blog Posts of the Week</h1>
+<h2>Title: The 1xers Guide to LLM, ChatGPT and AI</h2>
+<h3>Source: Pythonforengineers.com</h3>
+<h4>Summary:</h4>
+<ul>
+<li>LLMs (Large Language Models) are computer programs that can understand, interpret, generate, and respond to human languages.</li>
+<li>LLMs have been trained on large amounts of data and can generate text that sounds intelligent.</li>
+<li>Commercial LLMs like ChatGPT are advanced and provide detailed answers, while open source LLMs like LLama 2 are catching up.</li>
+<li>Running LLMs locally on your machine can be done using tools like Ollama or Mozilla's LLamafile.</li>
+<li>LLMs can also be used for generating images, but caution must be taken to avoid copyright infringements.</li>
+</ul>
+<p>Link: <a href="https://new.pythonforengineers.com/blog/the-1xers-guide-to-llm-chatgpt-ai/">Read More</a></p>
+
+<h2>Title: MK1 Flywheel Unlocks the Full Potential of AMD Instinct for LLM Inference</h2>
+<h3>Source: Mkone.ai</h3>
+<h4>Summary:</h4>
+<ul>
+<li>The new inference engine MK1 Flywheel enables AMD Instinct Series to achieve comparable performance to a compute-matched NVIDIA GPU.</li>
+<li>MK1 Flywheel shows up to 3.7x higher throughput compared to vLLM on AMD and NVIDIA hardware.</li>
+<li>AMD's Instinct MI300 series accelerator has the potential to challenge NVIDIA's market dominance for cloud AI workloads.</li>
+<li>MK1 Flywheel is a powerful LLM inference engine with unparalleled throughput and latency characteristics, rapid auto-scaling, and seamless integration into existing AI frameworks.</li>
+<li>The blog post discusses the journey of building the hardware and software components that brought Flywheel to life on AMD, highlighting the challenges and lessons learned.</li>
+</ul>
+<p>Link: <a href="https://mkone.ai/blog/mk1-flywheel-amd">Read More</a></p>
+
+<h2>Title: How close are we to peak AI?</h2>
+<h3>Source: Business Insider</h3>
+<h4>Summary:</h4>
+<ul>
+<li>No AI model has been able to outperform OpenAI's GPT-4 since its release in March.</li>
+<li>There are questions about whether generative AI, the most popular form of AI, is already peaking in terms of performance.</li>
+<li>While increases in performance are theoretically possible, they are harder to achieve in practice.</li>
+<li>Google's AI model, Gemini Ultra, barely outperforms GPT-4 on performance benchmarks.</li>
+<li>The industry is still hopeful for a significant jump in performance, but there may be limitations to transformer models like GPT-4.</li>
+</ul>
+<p>Link: <a href="https://www.businessinsider.com/generative-ai-chatgpt-getting-close-peak-2023-12">Read More</a></p>
+
 </body>
 </html>
